# dvc-push-issue

./: README.md  dvc.yaml  pyproject.toml
.dvc/: config
data/: .gitignore
