[tool.poetry]
name = "dvc-issue"
version = "0.1.0"
description = "Minimal example of DVC issue"
authors = ["Alex Hasha <ahasha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dvc = "3.30.1"
dvc-gs = "^2.22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
